# SortManager-Music-thesis

./: .gitignore  BetterREADME.html  CMakeLists.txt  README.HTML  README.MD  README.md  TODO .txt  TODO.txt  main.cpp
cpp/Backend/: Backend.cpp  Backend.h
cpp/Database/: Database-DBOperations.cpp  Database-DebugPrint.cpp  Database-ModelPrep.cpp  Database.cpp  Database.h
cpp/DebugPrint/: DebugPrint.h
cpp/Filter/: Filter.cpp  Filter.h
cpp/Personalization/: Personalization.cpp  Personalization.h
cpp/Player/: Player.cpp  Player.h
cpp/Playlist/: Playlist.cpp  Playlist.h
cpp/Song/: Song.cpp  Song.h  SongDetails.cpp  SongDetails.h  SongDetailsList.cpp  SongDetailsList.h  SongList.cpp  SongList.h
cpp/Tag/: Tag.cpp  Tag.h  TagDetails.cpp  TagDetails.h  TagDetailsList.cpp  TagDetailsList.h  TagList.cpp  TagList.h  TagWithComparator.cpp  TagWithComparator.h
qml/: Main.qml
qml/components/: BetterButton.qml  BottomPlayer.qml  EmptyListInfo.qml  EmptyPlaylistInfo.qml  ImageButton.qml  InfoToolTip.qml  ThinSeparator.qml  TriSwitch.qml  VolumeSlider.qml
qml/components/PagePlayer/: SongTitle.qml
qml/components/PagePlaylist/: PlaylistHeader.qml  ScrollCurrentSongMarker.qml
qml/components/Player/: SongTitle.qml
qml/delegates/: ButtonField.qml  ColorSelectField.qml  ComboBoxField.qml  DeleteField.qml  FileSelectField.qml  IntegerField.qml  NotChosenField.qml  PathSelectField.qml  SeparatorField.qml  StringField.qml  SwitchField.qml  TriSwitchField.qml
qml/delegates/DBManagement/: FileSaveButtonField.qml  FileSelectButtonField.qml  JustButtonField.qml
qml/delegates/Playlist/: ButtonField.qml  SongField.qml
qml/delegates/Playlist/Filters/: CompareIntegerField.qml  CompareStateField.qml  CompareStringField.qml
qml/delegates/Playlist/Filters/common/: ComparatorComponent.qml
qml/delegates/common/: LeftText.qml
qml/popups/: Popup1.qml  Popup2.qml  Popup3.qml  PopupLoading.qml  XPDeleteConfirm.qml
qml/popups/common/: TextsArea.qml
qml/views/: PagePlayer.qml  PagePlaylist.qml  PageSettings.qml
qml/views/PagePlaylist/: EditPlaylistSong.qml  Filters.qml  Playlist.qml
qml/views/PagePlaylist/components/: PlaylistHeader.qml
qml/views/PageSettings/: Settings.qml
qml/views/PageSettings/AppSettings/: DBManagement.qml  Personalizations.qml
qml/views/PageSettings/Songs/: AddSong.qml  EditSong.qml  Songs.qml
qml/views/PageSettings/Tags/: AddTag.qml  EditTag.qml  Tags.qml
